--- a/circuit.lyx
+++ b/circuit.lyx
@@ -85,11 +85,19 @@ Fixpunktlogik
 \end_layout
 
 \begin_layout Definition
-Die Logik 
+Die relationale Fixpunktlogik 
 \begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
  ist rekursiv wie folgt definiert:
+\end_layout
+
+\begin_layout Definition
+Entsprechend den Regeln der Logik 
+\begin_inset Formula $\mbox{FO}\left[\sigma\right]$
+\end_inset
+
+:
 \end_layout
 
 \begin_deeper
@@ -103,10 +111,14 @@ Für jedes Relationssymbol
 \end_inset
 
  ist 
-\begin_inset Formula $R\bar{x}\in\mathrm{FP}\left[\sigma\right]$
+\begin_inset Formula $R\bar{x}$
 \end_inset
 
-, und 
+ eine 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\end_inset
+
+-Formel, und 
 \begin_inset Formula $\left\llbracket R\bar{x}\right\rrbracket \left(\mathfrak{A},\beta\right)=1$
 \end_inset
 
@@ -118,36 +130,52 @@ Für jedes Relationssymbol
 \end_layout
 
 \begin_layout Itemize
-Für zwei Formeln 
-\begin_inset Formula $\psi_{1},\psi_{2}\in\mathrm{FP}\left[\sigma\right]$
+Für zwei 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
 \end_inset
 
- und 
+-Formeln 
+\begin_inset Formula $\varphi_{1},\varphi_{2}$
+\end_inset
+
+ und einen Junktor 
 \begin_inset Formula $\gamma\in\left\{ \wedge,\vee,\rightarrow,\leftrightarrow\right\} $
 \end_inset
 
  sei auch 
-\begin_inset Formula $\left(\psi_{1}\gamma\psi_{2}\right)\in\mathrm{FP}\left[\sigma\right]$
+\begin_inset Formula $\left(\varphi_{1}\gamma\varphi_{2}\right)$
 \end_inset
 
-, und 
-\begin_inset Formula $\left\llbracket \left(\psi_{1}\gamma\psi_{2}\right)\right\rrbracket \left(\mathfrak{A},\beta\right)$
+ eine 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\end_inset
+
+-Formel, und 
+\begin_inset Formula $\left\llbracket \left(\varphi_{1}\gamma\varphi_{2}\right)\right\rrbracket \left(\mathfrak{A},\beta\right)$
 \end_inset
 
  sei entsprechend den Booleschen Junktoren definiert.
 \end_layout
 
 \begin_layout Itemize
-Für jede Formel 
-\begin_inset Formula $\psi\in\mathrm{FP}\left[\sigma\right]$
+Für jede 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\end_inset
+
+-Formel 
+\begin_inset Formula $\varphi$
 \end_inset
 
  sei 
-\begin_inset Formula $\neg\psi\in\mathrm{FP}\left[\sigma\right]$
+\begin_inset Formula $\neg\varphi$
 \end_inset
 
-, und 
-\begin_inset Formula $\left\llbracket \neg\psi\right\rrbracket \left(\mathfrak{A},\beta\right)=1-\left\llbracket \psi\right\rrbracket \left(\mathfrak{A},\beta\right)$
+ eine 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\end_inset
+
+-Formel, und 
+\begin_inset Formula $\left\llbracket \neg\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)=1-\left\llbracket \varphi\right\rrbracket \left(\mathfrak{A},\beta\right)$
 \end_inset
 
 .
@@ -162,17 +190,25 @@ Für jeden Quantor
 \begin_inset Formula $x\in Var$
 \end_inset
 
- und jede Formel 
-\begin_inset Formula $\psi\in\mathrm{FP}\left[\sigma\right]$
+ und jede 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\end_inset
+
+-Formel 
+\begin_inset Formula $\varphi$
 \end_inset
 
  sei 
-\begin_inset Formula $Qx\psi\in\mathrm{FP}\left[\sigma\right]$
+\begin_inset Formula $Qx\varphi$
 \end_inset
 
-.
+ eine 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\end_inset
+
+-Formel.
  Es gelte 
-\begin_inset Formula $\left\llbracket \exists x\psi\right\rrbracket \left(\mathfrak{A},\beta\right)=1$
+\begin_inset Formula $\left\llbracket \exists x\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)=1$
 \end_inset
 
  genau dann wenn ein 
@@ -180,35 +216,85 @@ Für jeden Quantor
 \end_inset
 
  existiert, so dass 
-\begin_inset Formula $\left\llbracket \psi\right\rrbracket \left(\mathfrak{A},\beta\frac{a}{x}\right)=1$
+\begin_inset Formula $\left\llbracket \varphi\right\rrbracket \left(\mathfrak{A},\beta\frac{a}{x}\right)=1$
 \end_inset
 
 , und es gelte 
-\begin_inset Formula $\left\llbracket \forall x\psi\right\rrbracket \left(\mathfrak{A},\beta\right)=\left\llbracket \neg\exists x\neg\psi\right\rrbracket \left(\mathfrak{A},\beta\right)$
+\begin_inset Formula $\left\llbracket \forall x\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)=\left\llbracket \neg\exists x\neg\varphi\right\rrbracket \left(\mathfrak{A},\beta\right)$
 \end_inset
 
 .
 \end_layout
 
-\begin_deeper
-\begin_layout Itemize
-Für ein beliebiges Relationssymbol 
-\begin_inset Formula $R'\notin\sigma$
-\end_inset
-
- und jede Formel 
-\begin_inset Formula $\psi\in\mathrm{FP}\left[\sigma\cup\left\{ R'\right\} \right]$
-\end_inset
-
- sei 
-\begin_inset Formula $\mathrm{ifp}_{R'}\left[\psi\right]\left(\bar{x}\right)\in\mathrm{FP}\left[\sigma\right]$
-\end_inset
-
-, und es gelte [...] 
+\end_deeper
+\begin_layout Standard
+Zusätzlich wird der inflationäre Fixpunkt-Operator definiert:
 \end_layout
 
-\end_deeper
-\end_deeper
+\begin_layout Itemize
+Für ein beliebiges 
+\begin_inset Formula $k$
+\end_inset
+
+-stelliges Relationssymbol 
+\begin_inset Formula $R\notin\sigma$
+\end_inset
+
+, eine 
+\begin_inset Formula $k$
+\end_inset
+
+-stellige Formel 
+\begin_inset Formula $\varphi\left(\bar{x}\right)\in\mathrm{FP}\left[\sigma\cup\left\{ R\right\} \right]$
+\end_inset
+
+ und ein Tupel 
+\begin_inset Formula $\bar{t}\in Var^{k}$
+\end_inset
+
+ ist 
+\begin_inset Formula $\left[\mathrm{ifp}_{R,\bar{x}}\varphi\right]\left(\bar{t}\right)$
+\end_inset
+
+ eine 
+\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\end_inset
+
+-Formel.
+\end_layout
+
+\begin_layout Standard
+Die Auswertung 
+\begin_inset Formula $\left\llbracket \left[\mathrm{ifp}_{R,\bar{x}}\varphi\right]\left(\bar{t}\right)\right\rrbracket \left(\mathfrak{A},\beta\right)$
+\end_inset
+
+ sei der Fixpunkt der folgenden Sequenz 
+\begin_inset Formula $\left(R^{i}\right)_{i\geqslant0}$
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{eqnarray*}
+R^{0} & = & \emptyset\\
+R^{m+1} & = & R^{m}\cup\left\llbracket \varphi\right\rrbracket \left(\mathfrak{A}\cup R^{m}\right)
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+(Offensichtlich wird ein solcher Fixpunkt nach höchstens 
+\begin_inset Formula $\left|A\right|^{k}$
+\end_inset
+
+ Iterationen erreicht.)
+\end_layout
+
 \begin_layout Subsection
 Schaltkreise
 \end_layout
@@ -230,13 +316,12 @@ Eine boolesche Basis
 \begin_inset Formula $\phi:\left\{ 0,1\right\} ^{*}\rightarrow\left\{ 0,1\right\} $
 \end_inset
 
-, die o.b.d.A.
- als 
+, die hier als 
 \begin_inset Formula $\phi:\mathbb{N}\times\mathbb{N}\rightarrow\left\{ 0,1\right\} $
 \end_inset
 
  abgekürzt werden.
- Ein Gatter von Typ 
+ Ein Gatter vom Typ 
 \begin_inset Formula $\phi$
 \end_inset
 
@@ -342,7 +427,7 @@ eine Ausgabefunktion
 \end_layout
 
 \begin_layout Enumerate
-ein Universum 
+ein geordnetes Universum 
 \begin_inset Formula $U\coloneqq\left\{ 1,\cdots,n\right\} $
 \end_inset
 
@@ -377,7 +462,11 @@ Der Schaltkreis
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]:V\rightarrow\left\{ 0,1\right\} $
 \end_inset
 
-, die jedem Gatter den Wert 
+, die jedem Gatter 
+\begin_inset Formula $v\in V$
+\end_inset
+
+ den Wert 
 \begin_inset Formula $0$
 \end_inset
 
@@ -433,7 +522,7 @@ Für ein negiertes Literal
 \end_layout
 
 \begin_layout Enumerate
-Für ein inneres Gatter mit 
+Für ein inneres Gatter mit dem Symbol
 \begin_inset Formula $\Sigma\left(v\right)=\phi\in\mathbb{B}$
 \end_inset
 
@@ -478,17 +567,12 @@ Ein Tupel
 \begin_inset Formula $\mathcal{C}\left[\mathfrak{A}\right]\left(\bar{x}\right)=1$
 \end_inset
 
- bzw.
- 
+ beziehungsweise 
 \begin_inset Formula $\bar{x}\in\mathcal{C}\left[\mathfrak{A}\right]$
 \end_inset
 
  ein.
- Für 
-\begin_inset Formula $\mathrm{ar}\left(\mathcal{C}\right)=0$
-\end_inset
-
- schreiben wir 
+ Für 0-stellige Schaltkreise schreiben wir 
 \begin_inset Formula $\mathfrak{A}\models\mathcal{C}$
 \end_inset
 
@@ -548,7 +632,7 @@ Für eine
 \series bold
 invariant
 \series default
- genau dann wenn für alle Tupel 
+ genau dann für alle Tupel 
 \begin_inset Formula $\bar{a}\in A^{\mathrm{ar}\left(\mathcal{C}\right)}$
 \end_inset
 
@@ -614,7 +698,7 @@ symmetrisch
 \begin_inset Formula $\Omega$
 \end_inset
 
- entspricht:
+ treu ist:
 \end_layout
 
 \begin_layout Enumerate
@@ -640,7 +724,7 @@ Für alle Eingangsgatter
 \begin_inset Formula $\Sigma\left(\hat{\pi}v\right)=\neg R\,\pi\bar{x}$
 \end_inset
 
-
+.
 \end_layout
 
 \begin_layout Enumerate
@@ -731,7 +815,7 @@ Per Voraussetzung induziert
 \begin_inset Formula $\tau$
 \end_inset
 
- den Automorphismus 
+ einen Automorphismus 
 \begin_inset Formula $\hat{\tau}$
 \end_inset
 
@@ -739,19 +823,16 @@ Per Voraussetzung induziert
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
-, so dass 
-\begin_inset Formula $\Omega\left(\tau\bar{x}\right)=\hat{\tau}\Omega\left(\bar{x}\right)$
+: 
+\begin_inset Formula 
+\begin{eqnarray*}
+\Omega\left(\tau\bar{x}\right)=\hat{\tau}\Omega\left(\bar{x}\right) &  & \mbox{für alle \ensuremath{\bar{x}\in U^{\mathrm{ar}\left(\mathcal{C}\right)}}}\\
+\Sigma\left(\hat{\tau}v\right)=\tau\Sigma\left(v\right) &  & \mbox{für alle Eingangsgatter}
+\end{eqnarray*}
+
 \end_inset
 
- für alle 
-\begin_inset Formula $\bar{x}\in U^{\mathrm{ar}\left(\mathcal{C}\right)}$
-\end_inset
 
-, und 
-\begin_inset Formula $\Sigma\left(\hat{\tau}v\right)=\tau\Sigma\left(v\right)$
-\end_inset
-
- für alle Eingangsgatter.
 \end_layout
 
 \begin_layout Proof
@@ -769,15 +850,15 @@ Die maximale Länge eines Weges von einem Eingangsgatter zum Gatter
 
 \end_inset
 
- wird gezeigt, dass 
-\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}u\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(u\right)$
+ wird gezeigt: 
+\begin_inset Formula 
+\begin{eqnarray*}
+\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right) &  & \mbox{für alle \ensuremath{v\in V}}
+\end{eqnarray*}
+
 \end_inset
 
- für alle Gatter 
-\begin_inset Formula $v\in V$
-\end_inset
 
- gilt.
 \end_layout
 
 \begin_deeper
@@ -798,22 +879,30 @@ Induktionsanfang
 \begin_inset Formula $\Sigma\left(u\right)=R\bar{x}$
 \end_inset
 
-; so gilt 
-\begin_inset Formula $\Sigma\left(\hat{\tau}v\right)=R\tau\bar{x}$
-\end_inset
-
 .
- Offensichtlich gilt 
-\begin_inset Formula $\tau\bar{x}\in\tau\pi_{2}R^{\mathfrak{A}}$
+ Per Definition von 
+\begin_inset Formula $\tau$
 \end_inset
 
- genau dann wenn 
-\begin_inset Formula $\bar{x}\in\pi_{2}R^{\mathfrak{A}}$
+ und 
+\begin_inset Formula $\hat{\tau}$
 \end_inset
 
-.
- Es folgt 
-\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right)$
+ gilt: 
+\begin_inset Formula 
+\begin{eqnarray*}
+ &  & \Sigma\left(\hat{\tau}v\right)=R\tau\bar{x}\\
+ &  & \tau\bar{x}\in\tau\pi_{2}R^{\mathfrak{A}}\,\mbox{g.d.w.}\,\bar{x}\in\pi_{2}R^{\mathfrak{A}}
+\end{eqnarray*}
+
+\end_inset
+
+Es folgt: 
+\begin_inset Formula 
+\[
+\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right)
+\]
+
 \end_inset
 
 .
@@ -849,15 +938,23 @@ Annahme: Für alle Gatter
 \end_layout
 
 \begin_layout Standard
-So folgt für jedes Gatter mit Tiefe 
+So gilt für jedes Gatter mit Tiefe 
 \begin_inset Formula $n+1$
 \end_inset
 
-: Die Beschriftungen 
+: 
+\end_layout
+
+\begin_layout Enumerate
+Die Beschriftungen 
 \begin_inset Formula $\Sigma\left(\hat{\tau}u\right)=\Sigma\left(u\right)=\phi$
 \end_inset
 
- sind gleich, und für alle Vorgänger 
+ sind gleich.
+\end_layout
+
+\begin_layout Enumerate
+Für alle Vorgänger 
 \begin_inset Formula $u\in V$
 \end_inset
 
@@ -866,8 +963,11 @@ So folgt für jedes Gatter mit Tiefe
 \end_inset
 
 .
- Daher folgt 
-\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(u\right)$
+\end_layout
+
+\begin_layout Standard
+Es folgt 
+\begin_inset Formula $\mathcal{C}\left[\tau\pi_{2}\mathfrak{A}\right]\left(\hat{\tau}v\right)=\mathcal{C}\left[\pi_{2}\mathfrak{A}\right]\left(v\right)$
 \end_inset
 
 .
@@ -876,7 +976,7 @@ So folgt für jedes Gatter mit Tiefe
 \end_deeper
 \end_deeper
 \begin_layout Proof
-Schließlich folgt für jedes beliebige Tupel 
+Schließlich gilt für jedes Tupel 
 \begin_inset Formula $\bar{a}\in A^{\mathrm{ar}\left(\mathcal{C}\right)}$
 \end_inset
 
@@ -893,7 +993,11 @@ Schließlich folgt für jedes beliebige Tupel
 
 \end_inset
 
- 
+
+\end_layout
+
+\begin_layout Proof
+Damit ist der Schaltkreis invariant.
 \end_layout
 
 \begin_layout --Separator--
@@ -901,7 +1005,7 @@ Schließlich folgt für jedes beliebige Tupel
 \end_layout
 
 \begin_layout Proof
-Sei ein Schaltkreis 
+Als Gegenbeispiel wird der folgende Schaltkreis 
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
@@ -913,7 +1017,7 @@ Sei ein Schaltkreis
 \begin_inset Formula $\mathrm{ar}\left(\mathcal{C}\right)=0$
 \end_inset
 
- wie folgt:
+ angeführt:
 \end_layout
 
 \begin_layout Proof
@@ -1053,13 +1157,12 @@ Schaltkreis
 \end_layout
 
 \begin_layout Standard
-Der Schaltkreis ist offensichtlich invariant, da er genau den Isomorphietyp
- 
+Der Schaltkreis ist invariant, da er genau den Isomorphietyp 
 \begin_inset Formula $K_{2}$
 \end_inset
 
  akzeptiert.
- Er ist aber nicht symmetrisch, da die Permutation 
+ Er ist aber nicht symmetrisch, weil die Permutation 
 \begin_inset Formula $\left(1,2\right)\mapsto\left(2,1\right)$
 \end_inset
 
@@ -1116,11 +1219,7 @@ Eine
 \begin_inset Formula $\sigma$
 \end_inset
 
--Strukturen und entspreche einer 
-\begin_inset Formula $0$
-\end_inset
-
--stelligen Anfrage 
+-Strukturen und entspreche einer 0-stelligen Anfrage 
 \begin_inset Formula $q_{S}$
 \end_inset
 
@@ -1132,20 +1231,15 @@ Eine
 \end_layout
 
 \begin_layout Definition
-Jede 
+Per Definition sind alle 
 \begin_inset Formula $\sigma$
 \end_inset
 
--Anfrage ist invariant bezüglich Isomorphie; für je zwei isomorphe Strukturen
- 
-\begin_inset Formula $\mathfrak{A}=\pi\mathfrak{B}$
+-Anfragen und 
+\begin_inset Formula $\sigma$
 \end_inset
 
- gelte 
-\begin_inset Formula $q\left(\mathfrak{A}\right)=\pi q\left(\mathfrak{B}\right)$
-\end_inset
-
-.
+-Eigenschaften invariant bezüglich Graph-Isomorphismen.
 \end_layout
 
 \begin_layout --Separator--
@@ -1218,7 +1312,7 @@ Formel zu Schaltkreis
 
 \begin_layout Lemma
 Jede 
-\begin_inset Formula $\mathrm{FP}\left[\sigma\right]$
+\begin_inset Formula $\mathrm{FO}\left[\sigma\right]$
 \end_inset
 
 -Formel 
@@ -1233,7 +1327,11 @@ Jede
 \begin_inset Formula $q$
 \end_inset
 
-, die von einer 
+, die von einer invarianten Schaltkreis-Familie 
+\begin_inset Formula $\left(\mathcal{C}_{n}\right)_{n\in\mathbb{N}}$
+\end_inset
+
+ berechnet wird.
 \end_layout
 
 \begin_layout Standard
@@ -1254,7 +1352,6 @@ Sei
 \end_inset
 
 -Formel.
- S
 \end_layout
 
 \begin_layout Enumerate
